--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.12",
     "@web3auth/base": "^2.1.3",
     "@web3auth/web3auth": "^2.1.3",
+    "@web3auth/web3auth-wagmi-connector": "^1.0.0",
     "daisyui": "^2.31.0",
     "ethers": "^5.7.1",
     "next": "12.3.1",
@@ -24,8 +25,11 @@
     "@types/node": "18.8.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.8.4"
   }
 }
