--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@101xyz/course-viewer": "^0.0.1-dev3",
+    "@101xyz/ui-lib": "^0.0.1-dev1",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "@web3auth/base": "^2.1.3",
@@ -17,6 +19,7 @@
     "daisyui": "^2.31.0",
     "ethers": "^5.7.1",
     "next": "12.3.1",
+    "next-transpile-modules": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "wagmi": "^0.6.8"
