--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -3,4 +3,6 @@ src = 'src'
 out = 'out'
 libs = ['lib', 'node_modules']
 
+[rpc_endpoints]
+mumbai = "${MUMBAI_RPC_URL}"
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
