make education great

--- a/web/package.json
+++ b/web/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@101xyz/course-viewer": "^0.0.1-dev3",
-    "@101xyz/ui-lib": "^0.0.1-dev1",
+    "@101xyz/course-viewer": "^0.0.1-dev10",
+    "@101xyz/ui-lib": "^0.0.1-dev5",
+    "@ethersproject/bytes": "^5.7.0",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
+    "@rainbow-me/rainbowkit": "^0.7.1",
     "@web3auth/base": "^2.1.3",
     "@web3auth/web3auth": "^2.1.3",
     "@web3auth/web3auth-wagmi-connector": "^1.0.0",
     "daisyui": "^2.31.0",
     "ethers": "^5.7.1",
     "next": "12.3.1",
+    "next-auth": "^4.12.3",
     "next-transpile-modules": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
